Freedom Sanbox Ant Deploy/src/objects/X_Ray_Score_Card_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>X-Ray Score Card Details</relationshipLabel>
        <relationshipName>X_Ray_Score_Card_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Wellness__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Wellness</label>
        <referenceTo>Financial_Wellness__c</referenceTo>
        <relationshipLabel>X-Ray Score Card Details</relationshipLabel>
        <relationshipName>X_Ray_Score_Card_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>X-Ray Score Card Details</relationshipLabel>
        <relationshipName>X_Ray_Score_Card_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MasterScore__c</fullName>
        <label>Score</label>
        <summarizedField>XRay_ScoreCard__c.Score_Master__c</summarizedField>
        <summaryForeignKey>XRay_ScoreCard__c.XRayScoreCardMaster__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_Analysis__c</fullName>
        <label>Overall Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform_User_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to platform user lead</description>
        <label>Platform User Lead</label>
        <referenceTo>Lead_Platform_User__c</referenceTo>
        <relationshipLabel>X-Ray Score Card Details</relationshipLabel>
        <relationshipName>X_Ray_Score_Card_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Bank</label>
        <referenceTo>Question_Bank__c</referenceTo>
        <relationshipLabel>X-Ray Score Card Details</relationshipLabel>
        <relationshipName>X_Ray_Score_Card_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>X-Ray Score Card Detail</label>
    <nameField>
        <label>X-Ray Score Card Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>X-Ray Score Card Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>